--- a/FableFromScratch.fsproj
+++ b/FableFromScratch.fsproj
@@ -1,10 +1,11 @@
 <Project Sdk="FSharp.NET.Sdk;Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="src/Program.fs" />
+    <DotNetCliToolReference Include="dotnet-fable" Version="1.1.*" />
   </ItemGroup>
   <Import Project=".paket\Paket.Restore.targets" />
 </Project>
